--- a/Black-Scholes/OpenCL/Makefile
+++ b/Black-Scholes/OpenCL/Makefile
@@ -1,8 +1,8 @@
-INCLUDE=-I/usr/local/cuda-5.0/include
+#INCLUDE=-I/usr/local/cuda-5.0/include
 #LIBPATH=-L${OpenCL_SDK}/OpenCL/common/lib -L${OpenCL_SDK}/shared/lib
 LIB=-lOpenCL -lm
 all:
-	g++ -O3 ${INCLUDE} ${LIBPATH} ${LIB} blackScholesAnalyticEngine.c -o blackScholesAnalyticEngine.exe
+	g++ -O3 ${INCLUDE} ${LIBPATH} ${LIB} blackScholesAnalyticEngine.c -o blackScholesAnalyticEngine.exe ${LIB}
 
 clean:
 	rm -f *~ *.exe
